FotosImoveis finalmente finalizado. Falta a questão da senha do usuário e cleanar o código. Ex.: Não capturar exceções genéricas em Services, deixando o Controller p/ tratar,ou lançar RuntimeException para erros específicos de negócio.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,11 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 
-# # Configurações do servidor
-# server.port=8080
+# Diretório para salvar uploads de fotos
+app.upload.dir=./uploads
+
+# Configurações do servidor
+server.port=8080
 # server.servlet.context-path=/api
 # # Configurações de logging
 # logging.level.org.springframework=INFO
